src/objects/LR_Event_Journals_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LR Event Journals Relationships</relationshipLabel>
        <relationshipName>LR_Event_Journals_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Journals_M__c</fullName>
        <label>Event Journals</label>
        <referenceTo>Event_Journals__c</referenceTo>
        <relationshipLabel>LR Event Journals Relationship</relationshipLabel>
        <relationshipName>LR_Event_Journals_Relationship</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LR_Project_Overview_M__c</fullName>
        <label>LR Project Overview</label>
        <referenceTo>LR_Project_Overview__c</referenceTo>
        <relationshipLabel>LR Event Journals Relationship1</relationshipLabel>
        <relationshipName>LR_Event_Journals_Relationship1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LR_Status__c</fullName>
        <formula>TEXT(LR_Project_Overview_M__r.Status__c)</formula>
        <label>LR Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LR_Type__c</fullName>
        <label>LR Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EV MLM</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>SLR</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>LR Event Journals Relationships</relationshipLabel>
        <relationshipName>LR_Event_Journals_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>product</label>
        <referenceTo>Drug__c</referenceTo>
        <relationshipLabel>LR Event Journals Relationships</relationshipLabel>
        <relationshipName>LR_Event_Journals_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LR Event Journals Relationship</label>
    <nameField>
        <label>LR Event Journals Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LR Event Journals Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>